base/laravel/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      volumes: #This part is declaring the available volumes for the whole pod (not container-specific):
          - name: nginx-config
            configMap: #this will load the nginx configuration from a ConfigMap file
              name: laravel-nginx-config
      containers:
        - name: laravel
          image: laravel-app-local-img:latest 
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-configkj
              mountPath: /etc/nginx/conf.d
          startupProbe:
            httpGet:
              path: /health/startup
              port: 80
            failureThreshold: 30  # Try for 30 times
            periodSeconds: 10     # 30 * 10s = 5 minutes total to start up
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
