base/laravel/laravel-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-worker
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel-worker
          image: laravel-app-local-img:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
          workingDir: /var/www
          command:
          - "php"
          - "/var/www/artisan"
          - "queue:work"
          - "redis"
          - "--queue=default"
          - "--sleep=3"
          - "--tries=3"
          - "--verbose"

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
